tests/core/ill-typed/not-a-function/applying-non-function-3.stella
language core;

fn main(n : Nat) -> Nat {
  return (fn(x : Bool) { return fn(y : Nat) { return succ(y); }; })(false)(0)(n);
}